# minLFADS

./: LICENSE  README.md  pyproject.toml
data/: macaque_reaching_day_31.pkl
minlfads/: model.py  trainer.py  utils.py
projects/reaching/: reaching.py
