[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minLFADS"
version = "0.0.1"
description = "A minimal implementation of LFADS with leaky RNNs"
authors = [
	{name = "Miklos Kralik"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["torch >=2.0.0", "omegaconf", "numpy"]

[tool.setuptools]
packages = ["minlfads"]

